<resources>
    <string name="app_name">Reservasi Kelas</string>
    <string name="title_pilihan_login">Lanjutkan Sebagai:</string>
    <string name="title_mahasiswa">Mahasiswa</string>
    <string name="title_dosen">Dosen</string>
    <string name="title_login">Login</string>
    <string name="desc_login">Silahkan Masuk ke Akun Kamu</string>
    <string name="title_nim">NIM</string>
    <string name="title_password">Password</string>
    <string name="title_masuk">masuk</string>
    <string name="title_lupa_password">Lupa password?</string>
    <string name="title_pulihkan">Pulihkan</string>
    <string name="title_sedang_masuk">Sedang login…</string>
    <string name="title_nidn">NIDN</string>
    <string name="title_list_ruangan">List Ruangan</string>
    <string name="title_profile">Profile</string>
    <string name="title_status_reservasi">Status Reservasi</string>
    <string name="title_reservasi">Reservasi</string>
    <string name="title_homepage">Homepage</string>
    <string name="title_logout">Logout</string>
    <string name="title_logout_supporting_text">Apakah anda yakin akan logout?</string>
    <string name="title_cancel">Batal</string>
    <string name="title_accept">Ya</string>
    <string name="title_lihat_detail">Lihat Detail</string>
    <string name="title_tahun_angkatan">Tahun Angkatan %1$s</string>
    <string name="title_jurusan">Jurusan %1$s</string>
    <string name="title_kelas">Kelas %1$s</string>
    <string name="title_nama">Nama</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_loading">Loading…</string>
    <string name="title_nama_ruangan">Nama Ruangan</string>
    <string name="title_status_ruangan">Status Ruangan</string>
    <string name="title_lengkapi_data_reservasi">Lengkapi data reservasi</string>
    <string name="title_matakuliah">Matakuliah</string>
    <string name="title_tanggal">Tanggal</string>
    <string name="title_divider_jam">:</string>
    <string name="title_jam_awal">Jam Awal</string>
    <string name="title_jam_akhir">Jam Akhir</string>
    <string name="title_pilih_dosen">Pilih Dosen</string>
    <string name="title_pilih_matkul">Pilih Mata Kuliah</string>
    <string name="title_harap_tunggu">Sedang Mengambil Data…</string>
    <string name="title_ok">OK</string>
    <string name="title_pilih_tanggal">Pilih Tanggal</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="date_format_user">dd/MM/yyyy</string>
    <string name="title_pilih_jam">Pilih %1$s</string>
    <string name="clock_format">%1$d:%2$d</string>
    <string name="extra_kode_ruangan">kode_ruangan</string>
    <string name="extra_id_ruangan">id_ruangan</string>
    <string name="extra_id_mahasiswa">id_mahasiswa</string>
    <string name="title_sedang_reservasi">Reservasi ruangan...</string>
    <string name="title_success_reservation">Reservasi berhasil</string>
    <string name="extra_id_dosen">id_dosen</string>
    <string name="title_kode_matakuliah">Kode Mata Kuliah</string>
    <string name="title_email">Email</string>
    <string name="title_new_password">Password baru</string>
    <string name="title_confirmation_password">Konfirmasi Password</string>
    <string name="title_simpan">Simpan</string>
    <string name="title_ubah_password">Ubah password</string>
    <string name="title_update_success">Berhasil di update</string>
</resources>